src/objects/zqu__QuoteRatePlanOption__c.object
<CustomObject>
    <fields>
        <fullName>zqu__EffectiveEndDate__c</fullName>
        <description>The date when the corresponding Quote Rate Plan will expire.</description>
        <inlineHelpText>The date when the corresponding Quote Rate Plan will expire.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDate__c</fullName>
        <description>The date when the Quote Rate Plan becomes available.</description>
        <inlineHelpText>The date when the Quote Rate Plan becomes available.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__OriginalPrpoId__c</fullName>
        <label>Original Product Rate Plan Option Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the initial Product Rate Plan Option from the Product Catalog.</description>
        <inlineHelpText>A reference to the initial Product Rate Plan Option from the Product Catalog.</inlineHelpText>
        <label>Product Rate Plan Option</label>
        <referenceTo>zqu__ProductRatePlanOption__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Options</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product rate plan being overridden.</description>
        <inlineHelpText>The product rate plan being overridden.</inlineHelpText>
        <label>Product Rate Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ProductRatePlan__c.zqu__Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.zqu__Product__c</valueField>
            </filterItems>
            <filterItems>
                <field>zqu__ProductRatePlan__c.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Options</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product contains the overridden product rate plan.</description>
        <inlineHelpText>The product contains the overridden product rate plan.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Rate Plan Options</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteProductOption__c</fullName>
        <label>Quote Product Option</label>
        <referenceTo>zqu__QuoteProductOption__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Options</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the Quote Rate Plan that this option overrides.</description>
        <inlineHelpText>A reference to the Quote Rate Plan that this option overrides.</inlineHelpText>
        <label>Quote Rate Plan</label>
        <referenceTo>zqu__QuoteRatePlan__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Options</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote Rate Plan Option</label>
    <nameField>
        <label>Quote Rate Plan Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plan Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>zqu__Effective_Date_Rule</fullName>
        <active>true</active>
        <description>Effective End Date should be after Effective Start Date</description>
        <errorConditionFormula>AND(  
NOT( ISNULL( zqu__EffectiveStartDate__c) ),
NOT( ISNULL(  zqu__EffectiveEndDate__c ) ),
zqu__EffectiveEndDate__c &lt; zqu__EffectiveStartDate__c
 )</errorConditionFormula>
        <errorDisplayField>zqu__EffectiveEndDate__c</errorDisplayField>
        <errorMessage>Effective End Date cannot be before Effective Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Override_Rule</fullName>
        <active>true</active>
        <description>Overridden ProductRatePlan should belong to the Quote Product Option&apos;s child product</description>
        <errorConditionFormula>zqu__ProductRatePlan__r.zqu__Product__c  &lt;&gt;  zqu__QuoteProductOption__r.zqu__ChildProduct__c</errorConditionFormula>
        <errorDisplayField>zqu__ProductRatePlan__c</errorDisplayField>
        <errorMessage>Overridden ProductRatePlan should belong to the Quote Product Option&apos;s child product</errorMessage>
    </validationRules>
</CustomObject>